minor paragraph changes

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <section id = "main-section-img">
             <img src = "images/personal_photo.webp" alt = "Formal photo of Matthew Duncan in a suit" id = "main-img">
             <h3>Hi, I'm Matthew Duncan!</h3>
-            <p>I am currently a first-year Computer Science student with a strong passion for programming, problem-solving, and automation. I have experience working with C, C++, Java, SQL Server, Python, as well as HTML and CSS to build this site, and I’m eager to continue expanding my skills by learning new languages. My goal is to become a Software Engineer and contribute to building software that will positively impact and shape people’s futures.</p>
+            <p>I am currently a Computer Science student with a strong passion for programming, problem-solving, and automation. I have experience working with C, C++, Java, SQL Server, Python, as well as HTML and CSS to build this site, and I’m eager to continue expanding my skills by learning new languages. My goal is to become a Software Engineer and contribute to building software that will positively impact and shape people’s futures.</p>
             <a href = "About_Me.html">Read More</a>
         </section>
 
@@ -88,4 +88,5 @@
 
 
 </body>
+
 </html>
