--- a/About_Me.html
+++ b/About_Me.html
@@ -31,7 +31,7 @@
 <main>
     <section id = "AboutMe">
         <h2>Hi, I'm Matthew Duncan</h2>
-        <img src = "images/full_length_personal_photo.webp" alt = "Full length photo of Matthew Duncan in Formal attire">
+        <img src = "images/personal_photo.webp" alt = "Full length photo of Matthew Duncan in Formal attire">
         <p>I’m currently a first-year Computer Science student with a strong passion for programming, problem-solving, and automation. I’ve worked with a variety of languages and tools, including C, C++, Java, SQL Server, Python, as well as HTML and CSS, which I used to build this very site.
             I’ve already had the opportunity to participate in programming competitions like ICPC, where I put my problem-solving skills to the test in a team-based environment. Outside of competitions, I’ve practiced creating personal projects that explore areas like algorithm design, database management, and UI development. I take pride in writing clean, efficient code and enjoy the process of turning complex problems into practical solutions.
             I’m constantly seeking new challenges and opportunities to expand my skills, and I’m especially excited to dive deeper into topics like backend development and systems programming. My long-term goal is to become a Software Engineer and help design solutions that have a meaningful, lasting impact. I’m driven by the idea of building software that not only solves problems but also shapes the way people live and interact with technology.
@@ -53,4 +53,5 @@
 </footer>
 
 </body>
+
 </html>
